--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ cache: pip
 python:
   - 3.6.5
 install:
+  - pip install -r requirements.txt
   - pip install -r requirements.test.txt
 script:
   - green -vvv --run-coverage
