--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
   - pip install -r requirements.txt
   - pip install -r requirements.test.txt
 script:
+  - flake8 .
   - pytest tests/tests.py
 before_script:
   - curl -L "https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64"
