Set requirements versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,12 @@ cache: pip
 python:
   - 3.6.5
 install:
+  - pip install pip --upgrade
   - pip install -r requirements.txt
   - pip install -r requirements.test.txt
 script:
   - flake8 .
-  - pytest tests/tests.py
+  - python3 -m pytest tests/tests.py
 before_script:
   - curl -L "https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64"
     > ./cc-test-reporter
