--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ install:
   - pip install -r requirements.txt
   - pip install -r requirements.test.txt
 script:
-  - flake8 .
-  - python3 -m pytest tests/tests.py
+  - invoke t
 before_script:
   - curl -L "https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64"
     > ./cc-test-reporter
